force-app/main/default/objects/Invoice__c/fields/AccountAddress__c.field-meta.xml
<CustomField>
    <fullName>AccountAddress__c</fullName>
    <label>Account Address</label>
    <type>TextArea</type>
</CustomField>