force-app/main/default/objects/Invoice__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Cancel by CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>