force-app/main/default/objects/Invoice__c/fields/CancelReasonforCRM__c.field-meta.xml
<CustomField>
    <fullName>CancelReasonforCRM__c</fullName>
    <label>Cancel Reason for CRM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>