force-app/main/default/objects/Invoice__c/fields/DoNotSendInvoice__c.field-meta.xml
<CustomField>
    <fullName>DoNotSendInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Send Invoice</label>
    <type>Checkbox</type>
</CustomField>