force-app/main/default/objects/Invoice__c/fields/GLKey__c.field-meta.xml
<CustomField>
    <fullName>GLKey__c</fullName>
    <formula>TRIM(&quot;IV_GL_&quot;&amp; Opportunity__r.Account.AccountCode__c + &quot;_&quot; + Opportunity__r.Project__r.ProjectCode__c + &quot;_&quot; + Opportunity__r.Unit__r.ProductCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Key</label>
    <type>Text</type>
</CustomField>