force-app/main/default/objects/Invoice__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <description>เทียบเท่ากับ DueDate__c ของ OpportunityPayment__c ในรอบนั้นๆ</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>