force-app/main/default/objects/Invoice__c/fields/InvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo__c</fullName>
    <externalId>true</externalId>
    <label>Invoice No.</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>