force-app/main/default/objects/Invoice__c/fields/IsCancel__c.field-meta.xml
<CustomField>
    <fullName>IsCancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancel</label>
    <type>Checkbox</type>
</CustomField>