force-app/main/default/objects/Invoice__c/fields/LastCreatedStatusInPojjaman__c.field-meta.xml
<CustomField>
    <fullName>LastCreatedStatusInPojjaman__c</fullName>
    <label>Last Created Status In Pojjaman</label>
    <length>255</length>
    <type>Text</type>
</CustomField>