force-app/main/default/objects/Invoice__c/fields/LastGLStatusInPojjaman__c.field-meta.xml
<CustomField>
    <fullName>LastGLStatusInPojjaman__c</fullName>
    <label>Last GL Status In Pojjaman</label>
    <length>255</length>
    <type>Text</type>
</CustomField>