force-app/main/default/objects/Invoice__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <formula>Opportunity__r.Project__r.Name</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>