force-app/main/default/objects/Invoice__c/fields/UnitName__c.field-meta.xml
<CustomField>
    <fullName>UnitName__c</fullName>
    <formula>Opportunity__r.Unit__r.Name</formula>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>