force-app/main/default/objects/Invoice__c/validationRules/CheckCancelReasonforCRM.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCancelReasonforCRM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( CancelReason__c ,&quot;Cancel by CRM&quot;),
ISBLANK(  CancelReasonforCRM__c  )
)</errorConditionFormula>
    <errorDisplayField>CancelReasonforCRM__c</errorDisplayField>
    <errorMessage>Please input Cancel Reason</errorMessage>
</ValidationRule>